--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
 		"config": "1.25.0",
 		"cookie-parser": "1.4.3",
 		"express": "4.13.2",
-		"hogan": "^1.0.2",
-		"hogan-express": "^0.5.2"
+		"hogan": "1.0.2",
+		"hogan-express": "0.5.2"
 	},
 	"devDependencies": {}
 }
