--- a/.travis.yml
+++ b/.travis.yml
@@ -12,4 +12,5 @@ before_install:
 - sed -i -e "s/sonar.projectVersion=1.0.0/sonar.projectVersion=1.0.$TRAVIS_BUILD_NUMBER/g" sonar-project.properties
 script:
 - npm run lint
+- npm test
 - sonar-scanner
