--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,7 @@ addons:
     build_command_prepend: ""
     build_command: "--no-command --fs-capture-search ./ --fs-capture-search-exclude-regex coverage --fs-capture-search-exclude-regex node_modules"
     branch_pattern: master
+  srcclr: true
 
 before_install:
 - npm version 1.0.$TRAVIS_BUILD_NUMBER
